objects/ssot__AdverseEventOutcome__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdverseEventId__c</fullName>
        <label>Adverse Event</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Adverse Event Outcome Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OutcomeCodeId__c</fullName>
        <label>Outcome Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OutcomeCodeObject__c</fullName>
        <label>Outcome Code Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716667900122_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEventOutcome_AdverseEventId_m_rel</label>
        <referenceTo>ssot__AdverseEvent__dlm</referenceTo>
        <relationshipLabel>AdverseEventOutcome_AdverseEventId_m_rel</relationshipLabel>
        <relationshipName>rel_1716667900122_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721823952_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEventOutcome_OutcomeCodeId_ma_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>AdverseEventOutcome_OutcomeCodeId_ma_rel</relationshipLabel>
        <relationshipName>rel_1716721823952_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721831089_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEventOutcome_OutcomeCodeId_ma_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>AdverseEventOutcome_OutcomeCodeId_ma_rel</relationshipLabel>
        <relationshipName>rel_1716721831089_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>